# workshop-demo

./: .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
.napari/: DESCRIPTION.md
src/nag_demo/: __init__.py  _dock_widget.py  _reader.py  napari.yaml
src/nag_demo/_tests/: test_reader.py  test_writer.py
src/workshop_demo/: __init__.py  _constants.py  _dock_widget.py  _reader.py  _writer.py  napari.yaml
src/workshop_demo/_tests/: test_dock_widget.py  test_reader.py  test_writer.py
