[metadata]
name = nag-demo

author = Draga Doncila Pop
author_email = ddoncilapop@contractor.chanzuckerberg.com
url = https://github.com/DragaDoncila/nag-demo
license = BSD-3-Clause
description = A demo napari plugin incorporating reader, writer and dock widget contributions using the new npe2 plugin architecture.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/DragaDoncila/nag-demo/issues
    Documentation = https://github.com/DragaDoncila/nag-demo#README.md
    Source Code = https://github.com/DragaDoncila/nag-demo
    User Support = https://github.com/DragaDoncila/nag-demo/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    nag-demo = nag_demo
