[metadata]
name = workshop_demo
description = A demo napari plugin incorporating reader, writer and dock widget contributions using the new npe2 plugin architecture.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DragaDoncila/workshop-demo
author = Draga Doncila Pop
author_email = ddoncilapop@contractor.chanzuckerberg.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/DragaDoncila/workshop-demo/issues
    Documentation = https://github.com/DragaDoncila/workshop-demo#README.md
    Source Code = https://github.com/DragaDoncila/workshop-demo
    User Support = https://github.com/DragaDoncila/workshop-demo/issues

[options]
packages = find:
install_requires =
    dask[array]
    imagecodecs
    napari
    napari-plugin-engine>=0.1.4
    npe2
    numpy
    scikit-image
    tifffile
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    workshop-demo = workshop_demo:napari.yaml

[options.package_data]
workshop_demo =
    napari.yaml
